# claude-to-packet-tracer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_mcp.bat  run_mcp.sh
.github/workflows/: ci.yml
docs/screenshots/: README.md
examples/: 01_inspect.py  02_build_topology.py
samples/: biblio.pkt  template.pkt
scripts/: decode_pkt.py  test_edit.py  test_roundtrip.py
src/pt_codec/: __init__.py  codec.py  topology.py
src/pt_mcp_server/: server.py
tests/: test_codec_roundtrip.py
